--- a/compose.yaml
+++ b/compose.yaml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   weaviate:
     image: semitechnologies/weaviate:1.30.2
+    platform: linux/amd64
     container_name: weaviate
     ports:
       - "8080:8080"
