--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   weaviate:
-    image: local/weaviate:latest
+    image: semitechnologies/weaviate:1.30.2
     platform: linux/amd64
     container_name: weaviate
     ports:
