--- a/compose.yaml
+++ b/compose.yaml
@@ -2,9 +2,7 @@ version: '3.8'
 
 services:
   weaviate:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: semitechnologies/weaviate:1.30.2
     platform: linux/amd64
     container_name: weaviate
     ports:
